# bmad-story-automator

./: .gitignore  .npmignore  CONTRIBUTING.md  README.md  SECURITY.md  install.sh  package.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
docs/: agents-and-monitoring.md  cli-reference.md  development.md  how-it-works.md  installation-and-layout.md  review-workflow.md  state-and-resume.md  story-execution.md  troubleshooting.md
docs/changelog/: 260401.md  260412.md  260413.md  260414.md  260415.md
docs/plans/json-settings/: 01-why-json-settings.md  02-policy-model.md  03-code-and-payload-changes.md  04-migration-testing-and-risks.md  README.md  TODO.md
payload/.claude/skills/bmad-story-automator/: workflow.md
payload/.claude/skills/bmad-story-automator-review/: workflow.yaml
payload/.claude/skills/bmad-story-automator/data/: code-review-loop.md  monitoring-pattern.md  orchestration-policy.json  retry-fallback-implementation.md  scripts-reference.md  tmux-commands.md
scripts/: smoke-test.sh
source/: pyproject.toml
source/src/story_automator/adapters/: tmux.py
source/src/story_automator/commands/: orchestrator.py  orchestrator_parse.py  state.py  tmux.py  validate_story_creation.py
source/src/story_automator/core/: review_verify.py  runtime_policy.py  success_verifiers.py  tmux_runtime.py  workflow_paths.py
source/tests/: test_orchestrator_parse.py  test_runtime_policy.py  test_state_policy_metadata.py  test_success_verifiers.py  test_tmux_runtime.py
(+3 files in other folders)
