[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "story-automator"
version = "1.12.0"
description = "Python parity port of the BMAD story automator helper"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "BMAD", email = "bmad.directory@gmail.com" }
]

[project.scripts]
story-automator = "story_automator.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/story_automator"]
